# fervojo

./: .gitignore  Cargo.toml  README.md  run
src/: lib.rs
typst-package/: lib.typ  typst.toml
typst-package/examples/: simple.typ
